infra/banking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baking-ingress
  namespace: banking
spec:
  rules:
  - host: banking.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer-frontend-service
            port:
              number: 80
      - path: /api/v1/customer
        pathType: Prefix
        backend:
          service:
            name: customer-backend-service
            port:
              number: 9997
